feat: azure event hubs example